--- a/list.html
+++ b/list.html
@@ -68,20 +68,64 @@
         </div>
     </div>
 
-    <div class="tier">
-        <h2 class="txt m-txt_tight m-txt_colorPrimary">
-            Pets Available for Adoption
-        </h2>
+    <div class="titulo">
+        <blockquote class="blockquote text-center">
+            <p class="mb-0">
+                <h2 class="txt m-txt_tight m-txt_colorPrimary">Pets Available for Adoption</h2>
+            </p>
+        </blockquote>
     </div>
 
 
-    <div class="container-fluid">
-        <div class="row m-3 justify-content-start">
-            <div class="serchVerticalL col col-md-2">
-                dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
-                sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
+    <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="row justify-content-start">
+            <div class="serchVerticalL col col-sm-2 borderless">
+
+                <form class="form" action="/action_page.php">
+                    Filtros
+                    <hr />
+                    <div class="form-group">
+                        <label for="tipo">Tipo</label>
+                        <input type="tipo" class="form-control" id="tipo">
+                    </div>
+                    <div class="form-group">
+                        <label for="nombre">Nombre</label>
+                        <input type="nombre" class="form-control" id="nombre">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="barrio">Barrio</label>
+                        <input type="barrio" class="form-control" id="barrio">
+                    </div>
+                    <div class="form-group">
+                        <label for="raza">Raza</label>
+                        <input type="raza" class="form-control" id="raza">
+                    </div>
+                    <div class="form-group">
+                        <label for="sexo">Sexo</label>
+                        <input type="sexo" class="form-control" id="sexo">
+                    </div>
+                    <div class="form-group">
+                        <label for="edad">Edad</label>
+                        <input type="edad" class="form-control" id="edad">
+                    </div>
+                    <div class="form-group">
+                        <label for="pelo">Color de pelo</label>
+                        <input type="pelo" class="form-control" id="pelo">
+                    </div>
+                    <div class="form-group">
+                        <label for="ojos">Color de ojos</label>
+                        <input type="ojos" class="form-control" id="ojos">
+                    </div>
+
+                    <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Enviar</a>
+                    <button type="reset" class="btn btn-secondary">Cancelar</button>
+                </form>
+
+
+
             </div>
-            <div class="col col-md-center">
+            <div class="col col-sm-center shadow-lg p-3 mb-5 bg-white rounded">
                 <div class="row justify-content-around">
                     <div class="fichaAnimal col col-sm-4">
                         <div class="card">
@@ -101,7 +145,8 @@
                             <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Zeus</h5>
-                                <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the card title and make up the
+                                <p class="card-text">Some quick example tdfdfg dfg dfgdfg dfgfd gext to build on the
+                                    card title and make up the
                                     bulk
                                     of
                                     the card's content.</p>
@@ -122,10 +167,46 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="fichaAnimal col col-sm-4">
+                            <div class="card">
+                                <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Clarita</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the
+                                        bulk
+                                        of
+                                        the card's content.</p>
+                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                </div>
+                            </div>
+                        </div><div class="fichaAnimal col col-sm-4">
+                                <div class="card">
+                                    <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Clarita</h5>
+                                        <p class="card-text">Some quick example text to build on the card title and make up the
+                                            bulk
+                                            of
+                                            the card's content.</p>
+                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                    </div>
+                                </div>
+                            </div><div class="fichaAnimal col col-sm-4">
+                                    <div class="card">
+                                        <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Clarita</h5>
+                                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                                bulk
+                                                of
+                                                the card's content.</p>
+                                            <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                                        </div>
+                                    </div>
+                                </div>
                 </div>
             </div>
-            <div class="serchVerticalR col col-md-2">
+            <div class="serchVerticalR col col-sm-2">
                 dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
                 sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
             </div>
