--- a/list.html
+++ b/list.html
@@ -121,12 +121,12 @@
                     <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Enviar</a>
                     <button type="reset" class="btn btn-secondary">Cancelar</button>
                 </form>
-
-
-
             </div>
-            <div class="col col-sm-center shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="row justify-content-around">
+
+
+
+            <div class="col col-sm-center">
+                <div class="row justify-content-left">
                     <div class="fichaAnimal col col-sm-4">
                         <div class="card">
                             <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
@@ -207,8 +207,9 @@
                 </div>
             </div>
             <div class="serchVerticalR col col-sm-2">
-                dfgdfg dfg fdsg dfg sdfg fdg sdfg sdfgd fgdfg dfgfdsg dfg sdfgfdg sdfg sdfgdf gdfgdfg fdsg dfgsdf gfdg
-                sdfg sdfgdf gd fgdf fdsg dfgsdfgfdg sdfg sdfg
+                    <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
+                    <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
+                    <hr />
             </div>
         </div>
     </div>
