--- a/list.html
+++ b/list.html
@@ -126,8 +126,8 @@
 
 
             <div class="col col-sm-center">
-                <div class="row justify-content-left">
-                    <div class="fichaAnimal col col-sm-4">
+                <div class="row">
+                    <div class="col col-sm-4">
                         <div class="card">
                             <img src="assets/dog_10.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="fichaAnimal col col-sm-4">
+                    <div class="col col-sm-4">
                         <div class="card">
                             <img src="assets/dog_06.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="fichaAnimal col col-sm-4">
+                    <div class="col col-sm-4">
                         <div class="card">
                             <img src="assets/dog_07.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="fichaAnimal col col-sm-4">
+                    <div class="col col-sm-4">
                             <div class="card">
                                 <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
@@ -179,7 +179,7 @@
                                     <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                 </div>
                             </div>
-                        </div><div class="fichaAnimal col col-sm-4">
+                        </div><div class="col col-sm-4">
                                 <div class="card">
                                     <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
                                     <div class="card-body">
@@ -191,7 +191,7 @@
                                         <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                                     </div>
                                 </div>
-                            </div><div class="fichaAnimal col col-sm-4">
+                            </div><div class="col col-sm-4">
                                     <div class="card">
                                         <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
                                         <div class="card-body">
@@ -208,6 +208,7 @@
             </div>
             <div class="serchVerticalR col col-sm-2">
                     <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
+                    <hr />
                     <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
                     <hr />
             </div>
