--- a/list.html
+++ b/list.html
@@ -118,7 +118,8 @@
                         <input type="ojos" class="form-control" id="ojos">
                     </div>
 
-                    <a href="animal.html" class="btn btn-primary btn-md active" role="button" aria-pressed="true">Enviar</a>
+                    <a href="animal.html" class="btn btn-primary btn-md active" role="button"
+                        aria-pressed="true">Enviar</a>
                     <button type="reset" class="btn btn-secondary">Cancelar</button>
                 </form>
             </div>
@@ -168,49 +169,49 @@
                         </div>
                     </div>
                     <div class="col col-sm-4">
-                            <div class="card">
-                                <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Clarita</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the
-                                        bulk
-                                        of
-                                        the card's content.</p>
-                                    <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                </div>
+                        <div class="card">
+                            <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Clarita</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
                             </div>
-                        </div><div class="col col-sm-4">
-                                <div class="card">
-                                    <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Clarita</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the
-                                            bulk
-                                            of
-                                            the card's content.</p>
-                                        <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                    </div>
-                                </div>
-                            </div><div class="col col-sm-4">
-                                    <div class="card">
-                                        <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Clarita</h5>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                                bulk
-                                                of
-                                                the card's content.</p>
-                                            <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
-                                        </div>
-                                    </div>
-                                </div>
+                        </div>
+                    </div>
+                    <div class="col col-sm-4">
+                        <div class="card">
+                            <img src="assets/dog_08.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Clarita</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-sm-4">
+                        <div class="card">
+                            <img src="assets/dog_09.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Clarita</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk
+                                    of
+                                    the card's content.</p>
+                                <a href="animal.html" class="btn btn-primary btn-block">Ver</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="serchVerticalR col col-sm-2">
-                    <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
-                    <hr />
-                    <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
-                    <hr />
+                <img src="assets/publicidad_01.jpg" class="card-img-top" alt="...">
+                <hr />
+                <img src="assets/publicidad_02.jpg" class="card-img-top" alt="...">
+                <hr />
             </div>
         </div>
     </div>
