implementacion formulario newAnimals

--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,16 @@
         crossorigin="anonymous"></script>
 
 
+    <!--FOOTER-->
+    <hr />
+    <blockquote class="blockquote"></blockquote>
+    <footer class="blockquote-footer text-center">
+        <div class=footer>
+            <p>Posted by: Luis Besil</p>
+            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
+    </footer>
+    </blockquote>
+
 
 </body>
 
