--- a/list.html
+++ b/list.html
@@ -30,6 +30,7 @@
     <!-- Header -->
 
     <!-- NAVBAR -->
+    <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="list.html">Patitas</a>
 
@@ -46,9 +47,9 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-
-            <a href="register.html" class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" role="button"
-                aria-pressed="true">LogIn - Register</a>
+            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                Register
+            </button>
         </div>
     </nav>
 
@@ -218,12 +219,14 @@
 
 
     <!--FOOTER-->
-    <footer>
+    <hr />
+    <blockquote class="blockquote"></blockquote>
+    <footer class="blockquote-footer text-center">
         <div class=footer>
             <p>Posted by: Luis Besil</p>
-            <p>Contact information: <a href="mailto:l.besil@gmail.com">
-                    l.besil@gmail.com</a></p>
+            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
     </footer>
+    </blockquote>
 
 </body>
 
