--- a/animal.html
+++ b/animal.html
@@ -171,11 +171,15 @@
 
 
 
-        <footer>
-            <p>Posted by: Luis Besil</p>
-            <p>Contact information: <a href="mailto:l.besil@gmail.com">
-                    l.besil@gmail.com</a></p>
+        <!--FOOTER-->
+        <hr />
+        <blockquote class="blockquote"></blockquote>
+        <footer class="blockquote-footer text-center">
+            <div class=footer>
+                <p>Posted by: Luis Besil</p>
+                <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
         </footer>
+        </blockquote>
 
 </body>
 
