--- a/newAnimal.html
+++ b/newAnimal.html
@@ -30,26 +30,26 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="list.html">Patitas</a>
-    
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
-                    Register
-                </button>
-            </div>
-        </nav>
+        <a class="navbar-brand" href="list.html">Patitas</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                Register
+            </button>
+        </div>
+    </nav>
 
     <div class="jumbotron">
         <div class="container text-Left">
@@ -67,14 +67,243 @@
         </div>
     </div>
 
-    <div class="tier">
-        <h2 class="txt txt_h1 m-txt_tight m-txt_colorPrimary m-txt_alignCenter">
-            Pets Available for Adoption
-        </h2>
-
-        <p class="txt m-txt_bold m-txt_colorPrimaryS1 m-txt_alignCenter u-vr4x"></p>
+    <div class="titulo">
+        <blockquote class="blockquote text-center">
+            <p class="mb-0">
+                <h2 class="txt m-txt_tight m-txt_colorPrimary">New Pet</h2>
+            </p>
+        </blockquote>
     </div>
 
+
+    <div class="container shadow-lg p-3 mb-5 bg-white rounded">
+        <div class="row justify-content-center">
+            <div class="col col-sm-12 borderless">
+
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label for="inputEmail4">Nombre</label>
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Nombre ...">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword4">Raza</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Raza ...</option>
+                                <option value="1">Alano</option>
+                                <option value="2">Alaskan Malamute</option>
+                                <option value="3">American Staffordshire Terrier</option>
+                                <option value="4">American Water Spaniel</option>
+                                <option value="5">Antiguo Pastor Inglés</option>
+                                <option value="6">Basset Azul de Gaseogne</option>
+                                <option value="7">Basset Hound</option>
+                                <option value="8">Basset leonado de Bretaña</option>
+                                <option value="9">Beagle</option>
+                                <option value="10">Bearded Collie</option>
+                                <option value="11">Bichón Maltés</option>
+                                <option value="12">Bobtail</option>
+                                <option value="13">Border Collie</option>
+                                <option value="14">Boston Terrier</option>
+                                <option value="15">Boxer</option>
+                                <option value="16">Bull Terrier</option>
+                                <option value="17">Bulldog Americano</option>
+                                <option value="18">Bulldog Francés</option>
+                                <option value="19">Bulldog Inglés</option>
+                                <option value="20">Caniche</option>
+                                <option value="21">Carlino</option>
+                                <option value="22">Chihuahua</option>
+                                <option value="23">Cirneco del Etna</option>
+                                <option value="24">Chow Chow</option>
+                                <option value="25">Cocker Spaniel Americano</option>
+                                <option value="26">Cocker Spaniel Inglés</option>
+                                <option value="27">Dálmata</option>
+                                <option value="28">Dobermann</option>
+                                <option value="29">Dogo Alemán</option>
+                                <option value="30">Dogo Argentino</option>
+                                <option value="31">Dogo de Burdeos</option>
+                                <option value="32">Finlandés</option>
+                                <option value="33">Fox Terrier de pelo liso</option>
+                                <option value="34">Fox Terrier</option>
+                                <option value="35">Foxhound Americano</option>
+                                <option value="36">Foxhound Inglés</option>
+                                <option value="37">Galgo Afgano</option>
+                                <option value="38">Gigante de los Pirineos</option>
+                                <option value="39">Golden Retriever</option>
+                                <option value="40">Gos d'Atura</option>
+                                <option value="41">Gran Danés</option>
+                                <option value="42">Husky Siberiano</option>
+                                <option value="43">Laika de Siberia Occidental</option>
+                                <option value="44">Laika Ruso-europeo</option>
+                                <option value="45">Labrador Retriever</option>
+                                <option value="46">Mastín del Pirineo</option>
+                                <option value="47">Mastin del Tibet</option>
+                                <option value="48">Mastín Español</option>
+                                <option value="49">Mastín Napolitano</option>
+                                <option value="50">Pastor Alemán</option>
+                                <option value="51">Pastor Australiano</option>
+                                <option value="52">Pastor Belga</option>
+                                <option value="53">Pastor de Brie</option>
+                                <option value="54">Pastor de los Pirineos de Cara Rosa</option>
+                                <option value="55">Pekinés</option>
+                                <option value="56">Perdiguero Chesapeake Bay</option>
+                                <option value="57">Perdiguero de Drentse</option>
+                                <option value="58">Perdiguero de Pelo lido</option>
+                                <option value="59">Perdiguero de pelo rizado</option>
+                                <option value="60">Perdiguero Portugués</option>
+                                <option value="61">Pitbull</option>
+                                <option value="62">Podenco Ibicenco</option>
+                                <option value="63">Podenco Portugués</option>
+                                <option value="64">presa canario</option>
+                                <option value="65">Presa Mallorquin</option>
+                                <option value="66">Rottweiler</option>
+                                <option value="67">Rough Collie</option>
+                                <option value="68">Sabueso Español</option>
+                                <option value="69">Sabueso Hélenico</option>
+                                <option value="70">Sabueso Italiano</option>
+                                <option value="71">Sabueso Suizo</option>
+                                <option value="72">Samoyedo</option>
+                                <option value="73">San Bernardo</option>
+                                <option value="74">Scottish Terrier</option>
+                                <option value="75">Setter Irlandés</option>
+                                <option value="76">Shar Pei</option>
+                                <option value="77">Shiba Inu</option>
+                                <option value="78">Siberian Husky</option>
+                                <option value="79">Staffordshire Bull Terrier</option>
+                                <option value="80">Teckel</option>
+                                <option value="81">Terranova</option>
+                                <option value="82">Terrier Australiano</option>
+                                <option value="83">Terrier Escocés</option>
+                                <option value="84">Terrier Irlandés</option>
+                                <option value="85">Terrier Japonés</option>
+                                <option value="86">Terrier Negro Ruso</option>
+                                <option value="87">Terrier Norfolk</option>
+                                <option value="88">Terrier Norwich</option>
+                                <option value="89">Yorkshire Terrier</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputEmail4">Tipo</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Tipo ...</option>
+                                <option value="1">Perro</option>
+                                <option value="2">Gato</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputEmail4">Barrio</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Barrio ...</option>
+                                <option value="1">Pocitos</option>
+                                <option value="2">Parque Batlle</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label for="inputAddress2">Sexo</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Sexo ...</option>
+                                <option value="1">Macho</option>
+                                <option value="2">hembra</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputAddress2 col-md-4">Edad</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Edad ...</option>
+                                <option value="1">1 mes</option>
+                                <option value="2">2 meses</option>
+                                <option value="2">3 meses</option>
+                                <option value="2">4 meses</option>
+                                <option value="2">5 meses</option>
+                                <option value="2">6 meses</option>
+                                <option value="2">7 meses</option>
+                                <option value="2">8 meses</option>
+                                <option value="2">10 meses</option>
+                                <option value="2">11 meses</option>
+                                <option value="2">12 meses</option>
+                                <option value="2">1 Año</option>
+                                <option value="2">2 Año</option>
+                                <option value="2">3 Año</option>
+                                <option value="2">4 Año</option>
+                                <option value="2">5 Año</option>
+                                <option value="2">6 Año</option>
+                                <option value="2">7 Año</option>
+                                <option value="2">8 Año</option>
+                                <option value="2">9 Año</option>
+                                <option value="2">10 Año</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputAddress2 col-md-4">Color de ojos</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Color ...</option>
+                                <option value="1">Verdes</option>
+                                <option value="2">Azules</option>
+                                <option value="3">Castaños</option>
+                                <option value="4">Diferente tonalidad</option>
+                                <option value="5">Marrón oscuro</option>
+                                <option value="6">Grises</option>
+                                <option value="7">Negro</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputAddress2 col-md-4">Color de pelo</label>
+                            <select class="custom-select custom-select-md mb-3">
+                                <option selected>Color ...</option>
+                                <option value="1">Blanco</option>
+                                <option value="2">Crema</option>
+                                <option value="3">Beige</option>
+                                <option value="4">Marrón</option>
+                                <option value="5">Gris</option>
+                                <option value="6">Negro</option>
+                                <option value="7">Manchas</option>
+                                <option value="7">Atigrado</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label for="inputCity">Nombre de contacto</label>
+                            <input type="text" class="form-control" id="inputCity" placeholder="Nombre ...">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputState">Teléfono de contacto</label>
+                            <input type="text" class="form-control" id="inputCity" placeholder="Teléfono ...">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputZip">Email de contacto</label>
+                            <input type="email" class="form-control" id="inputZip" placeholder="Email ...">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="mb-3">
+                            <label for="validationTextarea">Descripción</label>
+                            <textarea class="form-control" id="validationTextarea"
+                                placeholder="Descripción ..."></textarea>
+                            <div class="invalid-feedback">
+                                Please enter a message in the textarea.
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+
+
+    <!--FOOTER-->
+    <hr />
+    <blockquote class="blockquote"></blockquote>
+    <footer class="blockquote-footer text-center">
+        <div class=footer>
+            <p>Posted by: Luis Besil</p>
+            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
+    </footer>
+    </blockquote>
 
 </body>
 
