--- a/register.html
+++ b/register.html
@@ -30,29 +30,37 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="list.html">Patitas</a>
-    
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-                <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
-                    Register
-                </button>
-            </div>
-        </nav>
+        <a class="navbar-brand" href="list.html">Patitas</a>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                Register
+            </button>
+        </div>
+    </nav>
 
 
-      
+    <!--FOOTER-->
+    <hr />
+    <blockquote class="blockquote"></blockquote>
+    <footer class="blockquote-footer text-center">
+        <div class=footer>
+            <p>Posted by: Luis Besil</p>
+            <p>Contact information: <a href="mailto:l.besil@gmail.com">l.besil@gmail.com</a></p>
+    </footer>
+    </blockquote>
 
 </body>
 
