--- a/list.html
+++ b/list.html
@@ -82,7 +82,7 @@
         <div class="row justify-content-start">
             <div class="serchVerticalL col col-sm-2 borderless">
 
-                <form class="form" action="/action_page.php">
+                <form class="form" action="">
                     Filtros
                     <hr />
                     <div class="form-group">
@@ -120,7 +120,7 @@
                     </div>
 
                     <a href="animal.html" class="btn btn-primary btn-md active" role="button"
-                        aria-pressed="true">Enviar</a>
+                        aria-pressed="true">Buscar</a>
                     <button type="reset" class="btn btn-secondary">Cancelar</button>
                 </form>
             </div>
@@ -169,6 +169,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col col-sm-4">
                         <div class="card">
                             <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
