--- a/newAnimal.html
+++ b/newAnimal.html
@@ -286,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <button type="submit" class="btn btn-primary">Registar</button>
                 </form>
 
 
