arrancando con blog

--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,90 @@
         crossorigin="anonymous"></script>
 
 
+
+
+
+
+    <!-- Header -->
+
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="list.html">Patitas</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+                Register
+            </button>
+        </div>
+    </nav>
+
+    <div class="jumbotron">
+        <div class="container text-Left">
+            <p class="h1 text-primary">
+                I am looking for friend!</p>
+            <p class="h6">This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. This is a template for a simple marketing or informational
+                wplate for a simple marketing or informational
+                website. This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. This is a template for a simple marketing or informational
+                website. This is a template for a simple marketing or informational website. This is a template for a
+                simple marketing or informational website. </p>
+            <button type="button" class="btn btn-primary">Learn more >></button>
+
+        </div>
+    </div>
+
+    <hr />
+    <div class="container">
+        <div class="row">
+            <div class="col col-9">
+                <div class="row">
+                    <div class="col col-4">
+
+                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="col col-8">
+                        <h5 class="card-title">Hermosos gatitos</h5>
+                        <p class="card-text"><small class="text-muted">Última actualización 3 semanas</small></p>
+                        <hr />
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum,
+                            you need to be sure there isn't anything embarrassing hidden in the middle of text. All the
+                            Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making
+                            this the first true generator on the Internet.</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col col-3">
+                2 of 2
+            </div>
+        </div>
+    </div>
+
+
+
+
     <!--FOOTER-->
     <hr />
     <blockquote class="blockquote"></blockquote>
