--- a/list.html
+++ b/list.html
@@ -42,6 +42,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -169,7 +172,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="col col-sm-4">
                         <div class="card">
                             <img src="assets/dog_11.jpg" class="card-img-top" alt="...">
