--- a/blog.html
+++ b/blog.html
@@ -77,33 +77,136 @@
     <hr />
     <div class="container">
         <div class="row">
-            <div class="col col-9">
+            <div class="col col-9 shadow-lg p-3 mb-5 bg-white rounded">
                 <div class="row">
                     <div class="col col-4">
-
                         <a href="blog.html" title="Gracias" id="featured-thumbnail">
                             <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
                                     alt="asdfd" title="asdfasdf">
                             </div>
-
                         </a>
                     </div>
                     <div class="col col-8">
                         <h5 class="card-title">Hermosos gatitos</h5>
-                        <p class="card-text"><small class="text-muted">Última actualización 3 semanas</small></p>
+                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
+                                semanas</small></p>
                         <hr />
                         <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour, or randomised words
-                            which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum,
-                            you need to be sure there isn't anything embarrassing hidden in the middle of text. All the
-                            Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making
-                            this the first true generator on the Internet.</p>
+                            which don't look even slightly believable.</p>
+                    </div>
+                </div>
 
+                <hr />
+
+                <div class="row">
+                    <div class="col col-4">
+                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col col-8">
+                        <h5 class="card-title">Hermosos gatitos</h5>
+                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
+                                semanas</small></p>
+                        <hr />
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
+                    </div>
+                </div>
+
+                <hr />
+
+                <div class="row">
+                    <div class="col col-4">
+                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col col-8">
+                        <h5 class="card-title">Hermosos gatitos</h5>
+                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
+                                semanas</small></p>
+                        <hr />
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
+                    </div>
+                </div>
+
+                <hr />
+
+                <div class="row">
+                    <div class="col col-4">
+                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col col-8">
+                        <h5 class="card-title">Hermosos gatitos</h5>
+                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
+                                semanas</small></p>
+                        <hr />
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
+                    </div>
+                </div>
+
+                <hr />
+
+                <div class="row">
+                    <div class="col col-4">
+                        <a href="blog.html" title="Gracias" id="featured-thumbnail">
+                            <div class="featured-thumbnail"><img src="assets/gatos_familia_01.jpg" class="img-fluid"
+                                    alt="asdfd" title="asdfasdf">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col col-8">
+                        <h5 class="card-title">Hermosos gatitos</h5>
+                        <p class="card-text"><small class="text-muted">FAMILIA RODRIGUEZ | Última actualización 3
+                                semanas</small></p>
+                        <hr />
+                        <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour, or randomised words
+                            which don't look even slightly believable.</p>
                     </div>
                 </div>
             </div>
-            <div class="col col-3">
-                2 of 2
+            <div class="col col-3 shadow-lg p-3 mb-5 bg-white rounded">
+                <h5 class="card-title">Archivo</h5>
+                <ul class="list-group list-group-item-info">
+                    <hr />
+                    <h2 class="card-title">2019</h2>
+                    <hr />
+                    <li class="list-group-item">
+                        <h6>Cras justo odio</h6>
+                    </li>
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                    <hr />
+                    <h2 class="card-title">2018</h2>
+                    <hr />
+                    <li class="list-group-item">
+                        <h6>Cras justo odio</h6>
+                    </li>
+                  
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
+
             </div>
         </div>
     </div>
