--- a/animal.html
+++ b/animal.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>animal.html</title>
 </head>
 
 <body>
@@ -43,6 +43,9 @@
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
