--- a/blog.html
+++ b/blog.html
@@ -47,6 +47,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -201,7 +204,7 @@
                     <li class="list-group-item">
                         <h6>Cras justo odio</h6>
                     </li>
-                  
+
                     <li class="list-group-item">Morbi leo risus</li>
                     <li class="list-group-item">Porta ac consectetur ac</li>
                     <li class="list-group-item">Vestibulum at eros</li>
