--- a/list.html
+++ b/list.html
@@ -45,6 +45,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
