--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
 
 
     <!-- Header -->
-
+   
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="list.html">Patitas</a>
@@ -72,7 +72,14 @@
 
         </div>
     </div>
-
+    <div class="titulo">
+            <blockquote class="blockquote text-center">
+                <p class="mb-0">
+                    <h2 class="txt m-txt_tight m-txt_colorPrimary">Blog</h2>
+                </p>
+            </blockquote>
+        </div>
+        
     <hr />
     <div class="container">
         <div class="row">
