--- a/whishlist.html
+++ b/whishlist.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>list.html</title>
+    <title>Whishlist.html</title>
 </head>
 
 
@@ -82,14 +82,8 @@
             </p>
         </blockquote>
     </div>
-
-
-
-    My Wishlist
-    You have no items in your wishlist.
-
-    « Back
-
+    <hr />
+    <p class="h5 text-center text-primary">You have no items in your wishlist.</p>
 
     <!--FOOTER-->
     <hr />
