--- a/blog.html
+++ b/blog.html
@@ -30,21 +30,21 @@
     <!-- Header -->
    
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="list.html">Patitas</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand text-light" href="list.html">Patitas</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link text-light" href="list.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                    <a class="nav-link text-light" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
+                    <a class="nav-link text-light" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                    <a class="nav-link text-light" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -79,7 +79,7 @@
                 </p>
             </blockquote>
         </div>
-        
+
     <hr />
     <div class="container">
         <div class="row">
