--- a/blog.html
+++ b/blog.html
@@ -31,30 +31,33 @@
 
 
     <!-- Header -->
-   
+
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand text-light" href="list.html">Patitas</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="list.html">Home <span class="sr-only"></span></a>
+                    <a class="nav-link" href="list.html">Home <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
+                    <a class="nav-link" href="newAnimal.html">Nuevo <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="blog.html">Blog <span class="sr-only"></span></a>
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link text-light" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
+                    <a class="nav-link" href="whishlist.html">Whishlist <span class="sr-only"></span></a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-            <button class="LogIn btn btn-outline-primary btn-sm my-2 my-sm-0 margin-left" type="submit">LogIn -
+            <button class="LogIn btn btn-outline-primary" type="submit"> LogIn -
                 Register
             </button>
         </div>
@@ -76,12 +79,12 @@
         </div>
     </div>
     <div class="titulo">
-            <blockquote class="blockquote text-center">
-                <p class="mb-0">
-                    <h2 class="txt m-txt_tight m-txt_colorPrimary">Blog</h2>
-                </p>
-            </blockquote>
-        </div>
+        <blockquote class="blockquote text-center">
+            <p class="mb-0">
+                <h2 class="txt m-txt_tight m-txt_colorPrimary">Blog</h2>
+            </p>
+        </blockquote>
+    </div>
 
     <hr />
     <div class="container">
