--- a/newAnimal.html
+++ b/newAnimal.html
@@ -216,31 +216,8 @@
                             </select>
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="inputAddress2 col-md-4">Edad</label>
-                            <select class="custom-select custom-select-md mb-3">
-                                <option selected>Edad ...</option>
-                                <option value="1">1 mes</option>
-                                <option value="2">2 meses</option>
-                                <option value="2">3 meses</option>
-                                <option value="2">4 meses</option>
-                                <option value="2">5 meses</option>
-                                <option value="2">6 meses</option>
-                                <option value="2">7 meses</option>
-                                <option value="2">8 meses</option>
-                                <option value="2">10 meses</option>
-                                <option value="2">11 meses</option>
-                                <option value="2">12 meses</option>
-                                <option value="2">1 Año</option>
-                                <option value="2">2 Año</option>
-                                <option value="2">3 Año</option>
-                                <option value="2">4 Año</option>
-                                <option value="2">5 Año</option>
-                                <option value="2">6 Año</option>
-                                <option value="2">7 Año</option>
-                                <option value="2">8 Año</option>
-                                <option value="2">9 Año</option>
-                                <option value="2">10 Año</option>
-                            </select>
+                            <label for="inputAddress2 col-md-4">Edad</label>                            
+                                    <input type="date" class="custom-select custom-select-md mb-3" name="bday">                           
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputAddress2 col-md-4">Color de ojos</label>
