--- a/list.html
+++ b/list.html
@@ -61,24 +61,21 @@
         </div>
     </nav>
 
+    <!-- jumbotron -->
     <div class="jumbotron">
-        <div class="container text-Left">
-            <p class="h1 text-primary">
-                I am looking for friend!</p>
-            <p class="h6">This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. This is a template for a simple marketing or informational
-                wplate for a simple marketing or informational
-                website. This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. This is a template for a simple marketing or informational
-                website. This is a template for a simple marketing or informational website. This is a template for a
-                simple marketing or informational website. </p>
-            <button type="button" class="btn btn-primary">Learn more >></button>
-
+        <div class="container">
+            <p class="h1 text-primary">Frase del día</p>
+            <br />
+            <p>“La conmiseración con los animales está íntimamente unida con la bondad de carácter, de tal manera que se
+                puede afirmar de seguro, que quien es cruel con los animales no puede ser buena persona”.<br>
+                <strong>Arthur
+                    Schopenhauer.</strong></p>
+            <a href="frases.html"><button type="button" class="btn btn-primary">Frases ... >></button></a>
         </div>
     </div>
-
+    <!-- fin jumbotron -->
     <div class="titulo">
-        <blockquote class="blockquote text-center">
+        <blockquote class="blockquote">
             <p class="mb-0">
                 <h2 class="txt m-txt_tight m-txt_colorPrimary">Pets Available for Adoption</h2>
             </p>
