--- a/list.html
+++ b/list.html
@@ -29,7 +29,7 @@
 
     <!-- Header -->
 
-    
+
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="list.html"><img src="assets/Logo-02.png" alt="Smiley face" height="63"
@@ -74,13 +74,12 @@
     </div>
     <!-- fin jumbotron -->
     <div class="titulo">
-        <blockquote class="blockquote">
+        <blockquote class="blockquote text-center">
             <p class="mb-0">
-                <h2 class="txt m-txt_tight m-txt_colorPrimary">Pets Available for Adoption</h2>
+                <h2 class="txt m-txt_tight m-txt_colorPrimary">Animales para Adoptar</h2>
             </p>
         </blockquote>
     </div>
-
 
     <div class="container-fluid shadow-lg p-3 mb-5 bg-white rounded">
         <div class="row justify-content-start">
